<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/location_failure_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/backgroundColorPrimary"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/location_failure_message"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/location_failure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/location_failure_button"
            android:textColor="@color/textColorButtonRaised" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginTop="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/zipcode_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_failure_zipcode_entry_hint"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/zipcode_entry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/location_failure_zipcode_entry_button"
            android:textColor="@color/textColorButtonRaised" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_permission_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/backgroundColorPrimary"
        android:visibility="invisible">

        <TextView
            android:id="@+id/location_permission_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/location_permission_message"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/location_permission_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/location_permission_button"
            android:textColor="@color/textColorButtonRaised" />

    </LinearLayout>

</FrameLayout>