<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/pet_master_click_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pet_master_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@color/lightGray"
                android:contentDescription="@string/pet_image_content_description" />

            <View
                android:id="@+id/pet_master_fade_view"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/gradient_black_bottom_up"
                android:layout_gravity="bottom"
                android:transitionName="@string/pet_master_detail_fade_transition"
                tools:ignore="UnusedAttribute"/>

            <TextView
                android:id="@+id/pet_master_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/textColorSecondary"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                tools:text="Holly"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/pet_master_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/clickable_card_background"
            android:transitionName="@string/pet_master_detail_text_transition"
            tools:ignore="UnusedAttribute">

            <TextView
                android:id="@+id/pet_master_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/textColorPrimary"
                android:textSize="18sp"
                tools:text="Dog - Great Dane"/>

            <TextView
                android:id="@+id/pet_master_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/textColorPrimaryLight"
                android:textSize="14sp"
                tools:text="Extra Large - Adult - Female - Nashville, TN"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>