<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorPrimary">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/pet_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/pet_detail_photo"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    android:background="@color/lightGray"
                    android:contentDescription="@string/pet_image_content_description"
                    tools:ignore="UnusedAttribute" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/gradient_black_top_down"
                    android:layout_gravity="top"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/gradient_black_bottom_up"
                    android:layout_gravity="bottom"
                    android:transitionName="@string/pet_master_detail_fade_transition"
                    tools:ignore="UnusedAttribute"/>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/pet_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                style="@style/CollapsingToolbarStyle"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:transitionName="@string/pet_master_detail_text_transition"
            tools:ignore="UnusedAttribute">

            <TextView
                android:id="@+id/pet_detail_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/textColorPrimary"
                android:textSize="18sp"
                tools:text="Dog - Great Dane"/>

            <TextView
                android:id="@+id/pet_detail_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/textColorPrimaryLight"
                android:textSize="14sp"
                tools:text="Extra Large - Adult - Female - Nashville, TN"/>

            <View
                android:id="@+id/pet_detail_description_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray"/>

            <TextView
                android:id="@+id/pet_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/textColorPrimaryLight"
                android:textSize="14sp"
                android:textIsSelectable="true"
                tools:text="A very good dog yes she is"/>

            <View
                android:id="@+id/pet_detail_phone_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

            <TextView
                android:id="@+id/pet_detail_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                tools:text="555-555-5555"/>

            <View
                android:id="@+id/pet_detail_email_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

            <TextView
                android:id="@+id/pet_detail_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                tools:text="sample@email.com"/>

            <View
                android:id="@+id/pet_detail_address_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

            <TextView
                android:id="@+id/pet_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                tools:text="Address line 1\nAddress line 2\nCity, State, Zip"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/pet_detail_favorite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_border_white"
        android:layout_margin="16dp"
        app:layout_anchor="@id/pet_detail_appbar"
        app:layout_anchorGravity="bottom|end"
        app:fabSize="normal" />

</android.support.design.widget.CoordinatorLayout>